# vau

./: .gitignore  CMakeLists.txt  README.md  WORKSPACE.bazel  brotli.bazel  check.sh  freetype.bazel  harfbuzz.bazel  libpng.bazel
.github/workflows/: macos.yml  macos_bazel.yml
resources/progs/: init-texmacs.scm
resources/progs/convert/tmml/: init-tmml.scm
resources/progs/kernel/boot/: boot.scm  compat.scm  debug.scm  prologue.scm
resources/progs/kernel/texmacs/: tm-convert.scm  tm-define.scm  tm-plugins.scm
src/: BUILD.bazel
src/Data/Observers/: ip_observer.cpp  link.cpp  list_observer.cpp
src/Data/String/: analyze.cpp  analyze.hpp
src/Data/Tree/: tree_modify.cpp  tree_modify.hpp
src/Kernel/Abstractions/: observer.cpp  observer.hpp
src/Kernel/Types/: modification.hpp  path.cpp  path.hpp
src/Scheme/Scheme/: glue.cpp  glue.hpp  object.hpp
src/Scheme/pscm/: pscm_tm.cpp  pscm_tm.hpp
src/Typeset/Concat/: concat_text.cpp
src/Vau/: type_traits.hpp  vau_buffer.cpp  vau_glue.cpp  vau_glue.hpp  vau_main.cpp
