load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
)

cmake(
    name = "brotli",
    cache_entries = {
        "BUILD_SHARED_LIBS": "OFF",
    },
    lib_source = ":srcs",
    out_static_libs = [
        "libbrotlienc.a",
        "libbrotlidec.a",
        "libbrotlicommon.a",
    ],
    visibility = ["//visibility:public"],
)
