cc_library(
    name = "base",
    srcs = [
        "Data/Convert/Generic/generic.cpp",
        "Data/Convert/Generic/indexation.cpp",
        #  "Data/Convert/Generic/input.cpp",
        "Data/Convert/Generic/post_convert.cpp",
        "Data/Convert/Scheme/from_scheme.cpp",
        "Data/Convert/Scheme/to_scheme.cpp",
        "Data/Convert/Texmacs/fromtm.cpp",
        "Data/Convert/Texmacs/rewrite_equation_number.cpp",
        "Data/Convert/Texmacs/totm.cpp",
        "Data/Convert/Texmacs/upgradetm.cpp",
        "Data/Convert/Verbatim/verbatim.cpp",
        #  "Data/Convert/Xml/cleanhtml.cpp",
        "Data/Convert/Xml/fromxml.cpp",
        #  "Data/Convert/Xml/parsehtml.cpp",
        #  "Data/Convert/Xml/parsexml.cpp",
        "Data/Convert/Xml/queryxml.cpp",
        "Data/Convert/Xml/xml.cpp",
        "Data/Document/new_data.cpp",
        "Data/Document/new_document.cpp",
        "Data/Document/new_style.cpp",
        "Data/Drd/drd_info.cpp",
        "Data/Drd/drd_mode.cpp",
        "Data/Drd/drd_std.cpp",
        "Data/Drd/tag_info.cpp",
        "Data/Drd/vars.cpp",
        "Data/History/archiver.cpp",
        "Data/History/commute.cpp",
        "Data/History/patch.cpp",
        "Data/Observers/edit_observer.cpp",
        "Data/Observers/highlight_observer.cpp",
        "Data/Observers/ip_observer.cpp",
        "Data/Observers/link.cpp",
        "Data/Observers/list_observer.cpp",
        "Data/Observers/tree_addendum.cpp",
        "Data/Observers/tree_pointer.cpp",
        "Data/Observers/tree_position.cpp",
        "Data/Observers/undo_observer.cpp",
        "Data/Parser/escaped_char_parser.cpp",
        "Data/Parser/identifier_parser.cpp",
        "Data/Parser/inline_comment_parser.cpp",
        "Data/Parser/keyword_parser.cpp",
        "Data/Parser/number_parser.cpp",
        "Data/Parser/operator_parser.cpp",
        "Data/Parser/preprocessor_parser.cpp",
        "Data/Parser/string_parser.cpp",
        "Data/String/analyze.cpp",
        "Data/String/base64.cpp",
        "Data/String/converter.cpp",
        "Data/String/fast_search.cpp",
        "Data/String/universal.cpp",
        "Data/String/wencoding.cpp",
        "Data/Tree/tree_analyze.cpp",
        "Data/Tree/tree_brackets.cpp",
        "Data/Tree/tree_correct.cpp",
        "Data/Tree/tree_cursor.cpp",
        "Data/Tree/tree_math_stats.cpp",
        "Data/Tree/tree_modify.cpp",
        "Data/Tree/tree_search.cpp",
        "Data/Tree/tree_select.cpp",
        #  "Data/Tree/tree_spell.cpp",
        "Data/Tree/tree_traverse.cpp",
        "Graphics/Bitmap_fonts/bitmap_font.cpp",
        "Graphics/Bitmap_fonts/glyph.cpp",
        "Graphics/Bitmap_fonts/glyph_analyze.cpp",
        "Graphics/Bitmap_fonts/glyph_distorted.cpp",
        "Graphics/Bitmap_fonts/glyph_effected.cpp",
        "Graphics/Bitmap_fonts/glyph_ops.cpp",
        "Graphics/Bitmap_fonts/glyph_shrink.cpp",
        "Graphics/Bitmap_fonts/glyph_transforms.cpp",
        "Graphics/Bitmap_fonts/glyph_unserif.cpp",
        "Graphics/Colors/colors.cpp",
        "Graphics/Colors/true_color.cpp",
        "Graphics/Fonts/charmap.cpp",
        "Graphics/Fonts/compound_font.cpp",
        "Graphics/Fonts/find_font.cpp",
        "Graphics/Fonts/font.cpp",
        "Graphics/Fonts/font_database.cpp",
        "Graphics/Fonts/font_guess.cpp",
        "Graphics/Fonts/font_protrusion.cpp",
        "Graphics/Fonts/font_scripts.cpp",
        "Graphics/Fonts/font_select.cpp",
        "Graphics/Fonts/font_spacing.cpp",
        "Graphics/Fonts/font_translate.cpp",
        "Graphics/Fonts/font_wide.cpp",
        "Graphics/Fonts/math_font.cpp",
        "Graphics/Fonts/poor_bbb.cpp",
        "Graphics/Fonts/poor_bold.cpp",
        "Graphics/Fonts/poor_distorted.cpp",
        "Graphics/Fonts/poor_effected.cpp",
        "Graphics/Fonts/poor_extended.cpp",
        "Graphics/Fonts/poor_italic.cpp",
        "Graphics/Fonts/poor_mono.cpp",
        "Graphics/Fonts/poor_rubber.cpp",
        "Graphics/Fonts/poor_smallcaps.cpp",
        "Graphics/Fonts/poor_stretched.cpp",
        "Graphics/Fonts/recolored_font.cpp",
        "Graphics/Fonts/smart_font.cpp",
        "Graphics/Fonts/superposed_font.cpp",
        "Graphics/Fonts/translator.cpp",
        "Graphics/Fonts/virtual_enhance.cpp",
        "Graphics/Fonts/virtual_font.cpp",
        "Graphics/Gui/widget.cpp",
        "Graphics/Handwriting/learn_handwriting.cpp",
        "Graphics/Handwriting/poly_line.cpp",
        "Graphics/Handwriting/recognize_handwriting.cpp",
        "Graphics/Handwriting/smoothen.cpp",
        "Graphics/Mathematics/math_tree.cpp",
        "Graphics/Mathematics/test_math.cpp",
        "Graphics/Pictures/effect.cpp",
        "Graphics/Pictures/picture.cpp",
        "Graphics/Pictures/raster_picture.cpp",
        "Graphics/Pictures/raster_random.cpp",
        "Graphics/Pictures/scalable.cpp",
        #  "Graphics/Renderer/basic_renderer.cpp",
        "Graphics/Renderer/brush.cpp",
        "Graphics/Renderer/page_type.cpp",
        "Graphics/Renderer/pencil.cpp",
        "Graphics/Renderer/printer.cpp",
        "Graphics/Renderer/renderer.cpp",
        "Graphics/Spacial/enlightened.cpp",
        "Graphics/Spacial/transformed.cpp",
        "Graphics/Spacial/triangulated.cpp",
        "Graphics/Types/curve.cpp",
        "Graphics/Types/curve_extras.cpp",
        "Graphics/Types/equations.cpp",
        "Graphics/Types/frame.cpp",
        "Graphics/Types/grid.cpp",
        "Graphics/Types/point.cpp",
        "Kernel/Abstractions/basic.cpp",
        "Kernel/Abstractions/command.cpp",
        "Kernel/Abstractions/observer.cpp",
        "Kernel/Abstractions/player.cpp",
        "Kernel/Types/modification.cpp",
        "Kernel/Types/parse_string.cpp",
        "Kernel/Types/path.cpp",
        "Kernel/Types/rectangles.cpp",
        "Kernel/Types/space.cpp",
        "Kernel/Types/string.cpp",
        "Kernel/Types/tab.cpp",
        "Kernel/Types/tree.cpp",
        "Kernel/Types/tree_label.cpp",
        # "Scheme/Guile/guile_tm.cpp",
        #  "Scheme/Scheme/glue.cpp",
        "System/Boot/preferences.cpp",
        "System/Classes/tm_timer.cpp",
        "System/Classes/url.cpp",
        "System/Files/file.cpp",
        "System/Files/make_file.cpp",
        "System/Files/tm_ostream.cpp",
        "System/Files/web_files.cpp",
        "System/Language/dictionary.cpp",
        "System/Language/fortran_language.cpp",
        "System/Language/hyphenate.cpp",
        "System/Language/impl_language.cpp",
        "System/Language/language.cpp",
        "System/Language/locale.cpp",
        "System/Language/math_language.cpp",
        "System/Language/mathemagix_language.cpp",
        "System/Language/packrat_grammar.cpp",
        "System/Language/packrat_parser.cpp",
        "System/Language/packrat_serializer.cpp",
        "System/Language/prog_language.cpp",
        "System/Language/r_language.cpp",
        "System/Language/scheme_language.cpp",
        "System/Language/scilab_language.cpp",
        "System/Language/text_language.cpp",
        "System/Language/verb_language.cpp",
        "System/Misc/data_cache.cpp",
        "System/Misc/fast_alloc.cpp",
        "Typeset/Boxes/Animate/animate_boxes.cpp",
        "Typeset/Boxes/Basic/basic_boxes.cpp",
        "Typeset/Boxes/Basic/boxes.cpp",
        "Typeset/Boxes/Basic/rubber_boxes.cpp",
        "Typeset/Boxes/Basic/stretch_boxes.cpp",
        "Typeset/Boxes/Basic/text_boxes.cpp",
        "Typeset/Boxes/Composite/case_boxes.cpp",
        "Typeset/Boxes/Composite/composite_boxes.cpp",
        "Typeset/Boxes/Composite/concat_boxes.cpp",
        "Typeset/Boxes/Composite/decoration_boxes.cpp",
        "Typeset/Boxes/Composite/math_boxes.cpp",
        "Typeset/Boxes/Composite/misc_boxes.cpp",
        "Typeset/Boxes/Composite/script_boxes.cpp",
        "Typeset/Boxes/Composite/stack_boxes.cpp",
        "Typeset/Boxes/Composite/superpose_boxes.cpp",
        "Typeset/Boxes/Graphics/graphics_boxes.cpp",
        "Typeset/Boxes/Graphics/grid_boxes.cpp",
        "Typeset/Boxes/Modifier/art_boxes.cpp",
        "Typeset/Boxes/Modifier/change_boxes.cpp",
        "Typeset/Boxes/Modifier/highlight_boxes.cpp",
        "Typeset/Boxes/Modifier/modifier_boxes.cpp",
        "Typeset/Bridge/bridge.cpp",
        "Typeset/Bridge/bridge_argument.cpp",
        "Typeset/Bridge/bridge_auto.cpp",
        "Typeset/Bridge/bridge_compound.cpp",
        "Typeset/Bridge/bridge_default.cpp",
        "Typeset/Bridge/bridge_docrange.cpp",
        "Typeset/Bridge/bridge_document.cpp",
        "Typeset/Bridge/bridge_eval.cpp",
        "Typeset/Bridge/bridge_expand_as.cpp",
        "Typeset/Bridge/bridge_formatting.cpp",
        "Typeset/Bridge/bridge_gui.cpp",
        "Typeset/Bridge/bridge_hidden.cpp",
        "Typeset/Bridge/bridge_locus.cpp",
        "Typeset/Bridge/bridge_mark.cpp",
        "Typeset/Bridge/bridge_rewrite.cpp",
        "Typeset/Bridge/bridge_surround.cpp",
        "Typeset/Bridge/bridge_with.cpp",
        "Typeset/Bridge/typesetter.cpp",
        "Typeset/Concat/concat_active.cpp",
        "Typeset/Concat/concat_animate.cpp",
        "Typeset/Concat/concat_graphics.cpp",
        "Typeset/Concat/concat_gui.cpp",
        "Typeset/Concat/concat_inactive.cpp",
        "Typeset/Concat/concat_macro.cpp",
        "Typeset/Concat/concat_math.cpp",
        "Typeset/Concat/concat_post.cpp",
        "Typeset/Concat/concat_text.cpp",
        "Typeset/Concat/concater.cpp",
        "Typeset/Env/env.cpp",
        "Typeset/Env/env_animate.cpp",
        "Typeset/Env/env_default.cpp",
        "Typeset/Env/env_exec.cpp",
        "Typeset/Env/env_inactive.cpp",
        "Typeset/Env/env_length.cpp",
        "Typeset/Env/env_semantics.cpp",
        "Typeset/Format/format.cpp",
        "Typeset/Format/formatter.cpp",
        "Typeset/Format/line_item.cpp",
        "Typeset/Format/page_item.cpp",
        "Typeset/Line/lazy_gui.cpp",
        "Typeset/Line/lazy_paragraph.cpp",
        "Typeset/Line/lazy_typeset.cpp",
        "Typeset/Line/lazy_vstream.cpp",
        "Typeset/Line/line_breaker.cpp",
        "Typeset/Page/columns_breaker.cpp",
        "Typeset/Page/make_pages.cpp",
        "Typeset/Page/new_breaker.cpp",
        "Typeset/Page/page_breaker.cpp",
        "Typeset/Page/pager.cpp",
        "Typeset/Page/skeleton.cpp",
        "Typeset/Page/vpenalty.cpp",
        "Typeset/Stack/stacker.cpp",
        "Typeset/Table/cell.cpp",
        "Typeset/Table/table.cpp",
        "Vau/vau_editor.cpp",
        "Vau/vau_main.cpp",
        "Vau/vau_stuff.cpp",
    ],
    hdrs = glob([
        "**/*.h",
        "**/*.hpp",
    ]) + [
        "Kernel/Containers/array.cpp",
        "Kernel/Containers/hashfunc.cpp",
        "Kernel/Containers/hashmap.cpp",
        "Kernel/Containers/hashmap_extra.cpp",
        "Kernel/Containers/hashset.cpp",
        "Kernel/Containers/hashtree.cpp",
        "Kernel/Containers/iterator.cpp",
        "Kernel/Containers/list.cpp",
        "Kernel/Containers/rel_hashmap.cpp",
    ],
    additional_compiler_inputs = [":config"],
    copts = [
        "-include $(location config)",
        "-std=c++20",
    ],
    includes = [
        ".",
        "Data/Convert",
        "Data/Document",
        "Data/Drd",
        "Data/History",
        "Data/Observers",
        "Data/Parser",
        "Data/String",
        "Data/Tree",
        "Edit",
        "Edit/Editor",
        "Edit/Interface",
        "Edit/Modify",
        "Edit/Process",
        "Edit/Replace",
        "Graphics/Bitmap_fonts",
        "Graphics/Colors",
        "Graphics/Fonts",
        "Graphics/Gui",
        "Graphics/Handwriting",
        "Graphics/Mathematics",
        "Graphics/Pictures",
        "Graphics/Renderer",
        "Graphics/Spacial",
        "Graphics/Types",
        "Kernel/Abstractions",
        "Kernel/Containers",
        "Kernel/Types",
        "Plugins",
        "Plugins/Pdf/LibAesgm",
        "Scheme",
        "Scheme/Guile",
        "Scheme/Scheme",
        "Style/Environment",
        "Style/Evaluate",
        "Style/Memorizer",
        "System",
        "System/Boot",
        "System/Classes",
        "System/Files",
        "System/Language",
        "System/Link",
        "System/Misc",
        "Texmacs",
        "Texmacs/Data",
        "Typeset",
        "Typeset/Bridge",
        "Typeset/Concat",
        "Typeset/Page",
    ],
)

cc_library(
    name = "plugin",
    srcs = glob([
        "Plugins/Freetype/*.cpp",
        "Plugins/Metafont/*.cpp",
    ]),
    additional_compiler_inputs = [":config"],
    copts = [
        "-include $(location config)",
        "-std=c++20",
        "-I bazel-out/darwin-fastbuild/bin/external/freetype/freetype/include/freetype2",
    ],
    deps = [
        ":base",
        "@freetype",
    ],
)

cc_library(
    name = "vau_pscm",
    srcs = [
        "Scheme/Scheme/object.cpp",
        "Scheme/pscm/pscm_tm.cpp",
        "Vau/vau_buffer.cpp",
        "Vau/vau_glue.cpp",
    ],
    additional_compiler_inputs = [":config"],
    copts = [
        "-include $(location config)",
        "-std=c++20",
    ],
    deps = [
        ":base",
        "@dev_pscm//:pscm",
    ],
)

cc_binary(
    name = "vau",
    linkopts = [
        "-lz",
        "-L /usr/local/opt/harfbuzz/lib",
        "-lharfbuzz",
        "-liconv",
        "-lbz2",
    ],
    deps = [
        ":plugin",
        ":vau_pscm",
        "@brotli",
        "@libpng"
    ],
)

filegroup(
    name = "config",
    srcs = ["System/config.h"],
)
